.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Cost_centre__c.object
<CustomObject>
    <description>Use if require a table of cost centres for Financial Reporting
Not used in standard configuration</description>
    <fields>
        <fullName>xcdhcm__Code_type__c</fullName>
        <label>Code type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Company</fullName>
                </value>
                <value>
                    <fullName>Department</fullName>
                </value>
                <value>
                    <fullName>Pay</fullName>
                </value>
                <value>
                    <fullName>Post</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>xcdhcm__Cost_centre__c</fullName>
        <description>This centre may be used for Companies, Departments, Pay or Post cost codes - depending on the code type</description>
        <inlineHelpText>Enter the reference code to be used for payments associated with this cost centre</inlineHelpText>
        <label>Cost centre description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__No_longer_in_use__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No longer in use</label>
        <type>Checkbox</type>
    </fields>
    <label>Cost Centre</label>
    <listViews>
        <fullName>xcdhcm__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Cost code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cost Centres</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>